updating matrix class